プロフ写真、ワーク写真3枚変更。

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <!-- コンタクトのところへとばす。#でid名指定。アイコン<i>をリンク<a>でくくる-->
             <div class="profile">
                 <h1 class="site-title abel uppercase text-center">Writer <span>SAKI.S</span></h1>
-                <img src="./images/img_profile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                <img src="./images/sakiprofile.png" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
                 <p>東京在住フリーライター、SAKI.Sです。日常をテーマとしたエッセイ、およびアートを中心としたインタビューを書いています。</p>
             </div>
         </header>
@@ -44,7 +44,7 @@
                 <h2 class="text-center">Works</h2>
                 <div class="works-box">
                     <a href="#">
-                    <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                    <img src="./images/img_corporate.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                     <div class="works-box-inner">
                         <div class="text-center">
                             <h3>株式会社きらめき コーポレートサイト</h3>
@@ -56,7 +56,7 @@
                 </div>    
                 <div class="works-box">
                 <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき太郎様 名刺デザイン">
+                <img src="./images/img_namecard.png" alt="きらめき太郎様 名刺デザイン">
                     <div class="works-box-inner">
                         <div class="text-center">
                             <h3>きらめき太郎様 名刺</h3>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="works-box">
                 <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/img_blog.png" alt="WordPressオリジナルテーマ">
                      <div class="works-box-inner">
                         <div class="text-center">
                             <h3>ブログデザイン</h3>
